--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 3
     
     Diane's Run Home Page
-    Author: 
-    Date:   
+    Author: Bryan
+    Date:   8/22/18
 
     Filename: dr_index.html
    -->
 
+
+
+    <!-- Meta tags were used to set encoding type and create keywords used to search the document.  -->
+    <meta charset="utf-8" />
+    <meta name="keywords" content="breast cancer, run, race, charity" />
+    <title>
+        Diane's Run
+    </title>
+    <link rel="stylesheet" href="dr_base.css">
+    <link rel="stylesheet" href="dr_layout.css">
 </head>
 
 <body>
- 
+
 </body>
 
 </html>
