--- a/dr_faq.html
+++ b/dr_faq.html
@@ -1,21 +1,22 @@
-<!doctype html>
+<!DOCKTYPE html>
 <html>
+
 <head>
-<!--
+    <!--
     New Perspectives on HTML5 and CSS3, 7th Edition
     Tutorial 1
     Case Problem 3
     
     Diane's Run Home Page
-    Author: 
-    Date:   
+    Author: Bryan Vargas
+    Date:   8/22/18
 
     Filename: dr_faq.html
    -->
-   <meta charset="utf-8">
-   <meta name="keywords" content="breast cancer, run, charity" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <title>Diane's Run FAQ</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="breast cancer, run, charity" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Diane's Run FAQ</title>
 
 </head>
 
