--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
    -->
 
 
-
-    <!-- Meta tags were used to set encoding type and create keywords used to search the document.  -->
+    <!-- -------------------------------------------------------------------------------------------------- -->
+    <!-- Meta tags were used to set encoding type and keywords were crearted to search the document. The title was established. Links were set up to add the CSS style created for the document.  -->
     <meta charset="utf-8" />
     <meta name="keywords" content="breast cancer, run, race, charity" />
     <title>
@@ -27,7 +27,32 @@
 </head>
 
 <body>
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+    <!-- Right under the NAV was created with anchors to make a path for three documents. The lists were created to go with the style sheets so the anchors appeared in the right place.  -->
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="dr_info.html">Race Info</a>
+                </li>
+                <li>
+                    <a href="dr_faq.html">FAQ</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
 
+    </section>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
