--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </head>
 
 <body>
-    <!-- -------------------------------------------------------------------------------------------------------- -->
+    <!--
+         --------------------------------------------------------------------------------------------------------
+    -->
     <!-- Right under the NAV was created with anchors to make a path for three documents. The lists were created to go with the style sheets so the anchors appeared in the right place.  -->
     <header>
         <nav>
@@ -43,9 +45,44 @@
                 </li>
             </ul>
         </nav>
+        <!-- 
+           ------------------------------------------------------------------------------------------------------
+           Waking up is hard.
+         -->
     </header>
     <section>
+        <h1>What Your Support Does</h1>
 
+        What Your Support Does
+
+        <p>
+            Every 10 minutes a woman is diagnosed with breast cancer. Her first reaction is fear and confusion. Support is just a phone
+            call or mouse click away. Our free services offer a friendly ear and expert guidance to anyone dealing with this
+            life-threatening illness.
+        </p>
+
+        <p>
+            By running or walking with us, you can ensure that we are there when people need us. Here is how your contribution can help:
+        </p>
+
+        <ul>
+            <li>
+                <strong>$</strong> 15 pays for a headscarf set, boosting the confidence of women who have lost their hair from her
+                breast cancer treatment.
+            </li>
+            <li>
+                <strong>$</strong> 50 trains a member of our support network for a year to help improve the care of women with breast
+                cancer.
+            </li>
+            <li>
+                <strong>$</strong> 125 covers the cost of counselling sessions to help women cope with the distress of their cancer
+                treatment.
+            </li>
+            <li>
+                <strong>$</strong> 250 funds a hospital information station for a year so that people affected by breast cancer have
+                easy access to the latest resources and help.
+            </li>
+        </ul>
     </section>
     <section>
 
