--- a/dr_faq.html
+++ b/dr_faq.html
@@ -13,15 +13,151 @@
 
     Filename: dr_faq.html
    -->
+
+
+    <!-- ---------------------------------------------------------------------------------------------------------------Links were created to have the right style applied to the structure of this document. Meta tags were used to create keywords that will find the document on the web browser. Charset was used to establish the character encoding. -->
     <meta charset="utf-8">
     <meta name="keywords" content="breast cancer, run, charity" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Diane's Run FAQ</title>
+    <link rel="stylesheet" href="dr_base.css">
+    <link rel="stylesheet" href="dr_layout3.css">
 
 </head>
+<!-- ------------------------------------------------------------------------------------------------------------------Both the first header and the footer were copied from the index and pasted onto this document. -->
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="dr_info.html">Race Info</a>
+                </li>
+                <li>
+                    <a href="dr_faq.html">FAQ</a>
+                </li>
+            </ul>
+        </nav>
 
+    </header>
+    <section>
+        <header id="pagetop">
+            <img src="dr_logo.png" alt="Diane's Run">
+
+            <h1>Frequently Asked Questions</h1>
+        </header>
+        <ol>
+            <li>How do I sign up?</li>
+            <li>What is the minimum fund-raising total I have to raise?</li>
+            <li>Will I receive a shirt to wear at the race?</li>
+            <li>When will my registration pack arrive?</li>
+            <li>What does it cost to register?</li>
+            <li>What happens during the race?</li>
+            <li>Will the race be cancelled if it rains?</li>
+            <li>Do I need to register my child?</li>
+            <li>Can I bring my pet?</li>
+            <li>Where do I park?</li>
+            <li>Can I collect sponsorship online?</li>
+            <li> How do I withdraw from the event?</li>
+            <li>I am looking for accommodation for the event, where is best to stay?</li>
+        </ol>
+
+        <h2 id="faq1"> How do I sign up? </h2>
+
+        <p>
+            Go to our online form where you can enter your registration information. Remember that the registration desk is closed the
+            night before the event.
+        </p>
+
+        <h2 id="faq2">
+            What is the minimum fund-raising total I have to raise?
+        </h2>
+        <p>
+            There is no minimum sponsorship target. Any total will help in the cause. Just try and raise as much as you can.
+        </p>
+
+
+        <h2>Will I receive a shirt to wear at the race?</h2>
+        <p>
+            Yes! We will be sending out a state of the art running vest or T-shirt to you in the post about a month before race day.
+            Please remember to specify which vest or T-shirt size you would like when confirming your place.
+        </p>
+
+
+        <h2>When will my registration pack arrive?</h2>
+        <p>
+            We will mail out your registration pack in the post within two weeks of your registration. If you have not received the pack
+            within that time, please contact us.
+        </p>
+
+
+        <h2>What does it cost to register?</h2>
+        <p>
+            $35 for the 5K/10K race. The 1-Mile Fun Runs are free.
+        </p>
+
+
+        <h2>What happens during the race?</h2>
+        <p>
+            Please visit the Race Info page for all details on what to expect on race day.
+        </p>
+
+
+        <h2>Will the race be cancelled if it rains?</h2>
+        <p>
+            This event will occur rain or shine. We suggest ponchos and rain gear if it does happen to rain. All registration fees and
+            donations are non-refundable in the event of rain.
+        </p>
+
+
+        <h2>Do I need to register my child?</h2>
+        <p>
+            Yes, if your child is participating in the 5K/10K races. There is no need to register children for the 1 Mile Fun Run.
+        </p>
+
+
+        <h2>Can I bring my pet?</h2>
+        <p>
+            Pets are discouraged at the race. There are over 2000 people competing in the race and it is too crowded to accommodate pets.
+        </p>
+
+
+        <h2>Where do I park?</h2>
+        <p>
+            The earlier you arrive at the race site, the easier parking will be! You may park on the streets as long as you are not blocking
+            driveways or residential streets. We encourage you to carpool with your team or other participants if possible.
+        </p>
+
+
+        <h2>Can I collect sponsorship online?</h2>
+        <p>
+            Yes. You can sign up at several web charity organizers and follow their easy step by step guide to create your own online
+            fund-raising page. All money raised through your page will be automatically sent through to us and allocated
+            to your record.
+        </p>
+
+
+        <h2>How do I withdraw from the event?</h2>
+        <p>
+            The registration pack will include an official event magazine with withdrawal instructions. Complete the withdrawal form
+            and send it to the race organizers along with the race gear and timing chip. A $10 organizational fee will be
+            charged to all withdrawals.
+        </p>
+
+
+        <h2>I am looking for accommodation for the event, where is best to stay?</h2>
+        <p>
+            We are partnering with the Cheyenne Chamber of Commerce to direct visiting runners for places to stay. Low-cost camping is
+            available in Prairie Park.
+        </p>
+
+    </section>
+    <footer>
+        Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001
+    </footer>
 </body>
 
 </html>
