--- a/dr_info.html
+++ b/dr_info.html
@@ -16,7 +16,7 @@
 
     <!-- 
     --------------------------------------------------------------------------------------------------------------
-    The meta data was established so the encoding language was set. The title for the documant was written. Links for the style sheets belonging to this specific document were set.
+    The meta data was established so the right character encoding was set. The title for the documant was written. Links for the style sheets belonging to this specific document were set.
  -->
 
 
@@ -54,44 +54,47 @@
 
     <section>
         <header>
-            <p>
-                The 2017 Diane's Run will be held Saturday, September 9th in Cheyenne starting at Prairie Park. All race fees are non-refundable
-                and non-transferable, even in the event of inclement weather. Two races are offered: a 5K (3.1 miles) and
-                a 10K (6.2 miles) event. We also offer a 1-mile Family Fun Walk.
-            </p>
-
-            <h2>Race Times</h2>
-            <p>
-                <ul>
-                    <li>5K Race starts promptly at 10 a.m.</li>
-                    <li>10K Race starts promptly at 11 a.m.</li>
-                    <li>Family Fun Walk starts at noon Celebration lunch and reception opens at 1:00 p.m.</li>
-                </ul>
-            </p>
-
-            <h2>Goodies and Stuff</h2>
-            <p>
-                <ul>
-                    <li>A state-of-the-art running vest</li>
-                    <li>A welcome pack with fund-raising advice and training tips</li>
-                    <li>A goody bag with fun surprises</li>
-                    <li>Refreshments from aid stations during and after the races</li>
-                    <li> Tickets to a delicious post-race reception and meal</li>
-                </ul>
-            </p>
-
-            <h2>Notes </h2>
-            <p>
-                <ul>
-                    <li>Registration will remain open until 10:00pm on Friday, September 8th.</li>
-                    <li>Registration fees for the 5K and 10K races increase to $40 after Friday, September 1st.</li>
-                    <li>Race donations will be accepted through December 16th of this year.</li>
-                </ul>
-            </p>
+            <h1>Race Information</h1>
+            <img src="dr_logo.png" alt="Diane's Run">
         </header>
+        <p>
+            The 2017 Diane's Run will be held Saturday, September 9th in Cheyenne starting at Prairie Park. All race fees are non-refundable
+            and non-transferable, even in the event of inclement weather. Two races are offered: a 5K (3.1 miles) and a 10K
+            (6.2 miles) event. We also offer a 1-mile Family Fun Walk.
+        </p>
+
+        <h2>Race Times</h2>
+        <p>
+            <ul>
+                <li>5K Race starts promptly at 10 a.m.</li>
+                <li>10K Race starts promptly at 11 a.m.</li>
+                <li>Family Fun Walk starts at noon Celebration lunch and reception opens at 1:00 p.m.</li>
+            </ul>
+        </p>
+
+        <h2>Goodies and Stuff</h2>
+        <p>
+            <ul>
+                <li>A state-of-the-art running vest</li>
+                <li>A welcome pack with fund-raising advice and training tips</li>
+                <li>A goody bag with fun surprises</li>
+                <li>Refreshments from aid stations during and after the races</li>
+                <li> Tickets to a delicious post-race reception and meal</li>
+            </ul>
+        </p>
+
+        <h2>Notes </h2>
+        <p>
+            <ul>
+                <li>Registration will remain open until 10:00pm on Friday, September 8th.</li>
+                <li>Registration fees for the 5K and 10K races increase to $40 after Friday, September 1st.</li>
+                <li>Race donations will be accepted through December 16th of this year.</li>
+            </ul>
+        </p>
+
 
     </section>
-    <!-- The footer was also copied from the index onto this document. -->
+    <!-- -------------------------------------------------------------------------------------------------------------The footer was also copied from the index onto this document. -->
     <footer>
         Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001
     </footer>
