--- a/index.html
+++ b/index.html
@@ -98,47 +98,47 @@
             <img src="dr_photo1.png" alt="Diane's Run">
             <h1>
                 <strong>Diane's Run</strong> - September 9, 2017
-            </h1>
-            <p>
-
-                Join over 2000 athletes in Cheyenne, Wyoming, for Diane's Run to raise money for breast cancer awareness and research. The
-                5K and 10K races are challenging, yet attainable. You can aim for a personal best while taking part to raise
-                money for this important charity. If you can't run, consider walking; joining young and old in the fight
-                by participating in the 1-Mile Walk for Hope.
-            </p>
-            <h2>How to Join</h2>
-
-            <p>
-                You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com. The $35 entry fee is tax
-                deductible and goes directly to important research and women in need. We keep our overhead very low so every
-                dollar counts. More than 75% of the net proceeds fund screening and treatment programs in your communities.
-                We welcome out-of-town visitors. We will help you find accommodations during your visit.
-            </p>
-
-            <h2>History</h2>
-
-            <p>
-                Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature Wyoming
-                event with more than 2000 participants annually. The event is enormously effective in spreading the message
-                that breast cancer need not be fatal if caught early enough with mammography and breast self-exam. As well
-                as a top-flight athletic event, Diane's Run is an emotionally moving event attracting many first timers and
-                recreational runners. This event provides all of us with the opportunity to spread a hopeful message about
-                breast cancer to our families and our communities.
-            </p>
-
-            <h2>Remembering Diane</h2>
-
-            <p>Diane's Run is named in remembrance of Diane Wheaton, mother of 2 and wife of Peter, who passed away in May,
-                2003. Diane was an outspoken advocate of physical fitness and healthy living. She was an inspiration to all
-                who knew her and continues to be an inspiration to the thousands of runners who have participated in this
-                event.
-            </p>
-
-            <p>
-                We hope you can join us this year and become part of the Diane's Run family.
-            </p>
-
         </header>
+        </h1>
+        <p>
+
+            Join over 2000 athletes in Cheyenne, Wyoming, for Diane's Run to raise money for breast cancer awareness and research. The
+            5K and 10K races are challenging, yet attainable. You can aim for a personal best while taking part to raise
+            money for this important charity. If you can't run, consider walking; joining young and old in the fight by participating
+            in the 1-Mile Walk for Hope.
+        </p>
+        <h2>How to Join</h2>
+
+        <p>
+            You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com. The $35 entry fee is tax
+            deductible and goes directly to important research and women in need. We keep our overhead very low so every
+            dollar counts. More than 75% of the net proceeds fund screening and treatment programs in your communities. We
+            welcome out-of-town visitors. We will help you find accommodations during your visit.
+        </p>
+
+        <h2>History</h2>
+
+        <p>
+            Since its inception in 2004, Diane's Run has grown from a purely local event involving 100 runners to a signature Wyoming
+            event with more than 2000 participants annually. The event is enormously effective in spreading the message that
+            breast cancer need not be fatal if caught early enough with mammography and breast self-exam. As well as a top-flight
+            athletic event, Diane's Run is an emotionally moving event attracting many first timers and recreational runners.
+            This event provides all of us with the opportunity to spread a hopeful message about breast cancer to our families
+            and our communities.
+        </p>
+
+        <h2>Remembering Diane</h2>
+
+        <p>Diane's Run is named in remembrance of Diane Wheaton, mother of 2 and wife of Peter, who passed away in May, 2003.
+            Diane was an outspoken advocate of physical fitness and healthy living. She was an inspiration to all who knew
+            her and continues to be an inspiration to the thousands of runners who have participated in this event.
+        </p>
+
+        <p>
+            We hope you can join us this year and become part of the Diane's Run family.
+        </p>
+
+
     </section>
 
     <!-- ----------------------------------------------------------------------------------------------------
