--- a/dr_info.html
+++ b/dr_info.html
@@ -15,7 +15,7 @@
    -->
 
     <!-- 
-    --------------------------------------------------------------------------------------------------------------
+    -----------------------------------------------------------------------------------------------------------------------------------
     The meta data was established so the right character encoding was set. The title for the documant was written. Links for the style sheets belonging to this specific document were set.
  -->
 
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="dr_layout2.css">
 
     <!-- 
-        ----------------------------------------------------------------------------------------------------------
+        -------------------------------------------------------------------------------------------------------------------------------
         The header with the Nav nest was copied from the index and pasted here.
      -->
 </head>
@@ -50,7 +50,7 @@
 
     </header>
 
-    <!-- --------------------------------------------------------------------------------------------------------------A new section was created with a header to establish the style in which the text will appear. The topic titles were given immportance with an h2 tag. unordered lists were created to organized all the information within the paragraph tags.  -->
+    <!-- --------------------------------------------------------------------------------------------------------------------------------- A new section was created with a header to establish the style in which the text will appear. The topic titles were given immportance with an h2 tag. unordered lists were created to organized all the information within the paragraph tags.  -->
 
     <section>
         <header>
@@ -94,7 +94,7 @@
 
 
     </section>
-    <!-- -------------------------------------------------------------------------------------------------------------The footer was also copied from the index onto this document. -->
+    <!-- ---------------------------------------------------------------------------------------------------------------------------------- The footer was also copied from the index onto this document. -->
     <footer>
         Diane’s Run &#9829; 45 Mountain Drive &#9829; Cheyenne, WY 82001
     </footer>
