--- a/dr_faq.html
+++ b/dr_faq.html
@@ -15,7 +15,7 @@
    -->
 
 
-    <!-- ---------------------------------------------------------------------------------------------------------------Links were created to have the right style applied to the structure of this document. Meta tags were used to create keywords that will find the document on the web browser. Charset was used to establish the character encoding. -->
+    <!-- -----------------------------------------------------------------------------------------------------------------------------------Links were created to have the right style applied to the structure of this document. Meta tags were used to create keywords that will find the document on the web browser. Charset was used to establish the character encoding. -->
     <meta charset="utf-8">
     <meta name="keywords" content="breast cancer, run, charity" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="dr_layout3.css">
 
 </head>
-<!-- ------------------------------------------------------------------------------------------------------------------Both the first header and the footer were copied from the index and pasted onto this document. -->
+<!-- ---------------------------------------------------------------------------------------------------------------------------------------Both the first header and the footer were copied from the index and pasted onto this document. -->
 
 <body>
     <header>
@@ -43,26 +43,54 @@
         </nav>
 
     </header>
+    <!-- ----------------------------------------------------------------------------------------------------------------------------------- Within this section the header was made and an image was intergrated useing the image tag, the most important header was stated using h1. An Ordered list was created to organize the Frequently aked questions. Anchor tags were  directed to headers and paragrphs using id's and the term "faq". The hyperlinks then created a path from the questions to the answers. -->
     <section>
         <header id="pagetop">
             <img src="dr_logo.png" alt="Diane's Run">
 
             <h1>Frequently Asked Questions</h1>
         </header>
+
         <ol>
-            <li>How do I sign up?</li>
-            <li>What is the minimum fund-raising total I have to raise?</li>
-            <li>Will I receive a shirt to wear at the race?</li>
-            <li>When will my registration pack arrive?</li>
-            <li>What does it cost to register?</li>
-            <li>What happens during the race?</li>
-            <li>Will the race be cancelled if it rains?</li>
-            <li>Do I need to register my child?</li>
-            <li>Can I bring my pet?</li>
-            <li>Where do I park?</li>
-            <li>Can I collect sponsorship online?</li>
-            <li> How do I withdraw from the event?</li>
-            <li>I am looking for accommodation for the event, where is best to stay?</li>
+            <li>
+                <a href="#faq1">How do I sign up?</a>
+            </li>
+            <li>
+                <a href="#faq2">What is the minimum fund-raising total I have to raise?</a>
+            </li>
+            <li>
+                <a href="#faq3">Will I receive a shirt to wear at the race?</a>
+            </li>
+            <li>
+                <a href="#faq4">When will my registration pack arrive?</a>
+            </li>
+            <li>
+                <a href="#faq5">What does it cost to register?</a>
+            </li>
+            <li>
+                <a href="#faq6">What happens during the race?</a>
+            </li>
+            <li>
+                <a href="#faq7">Will the race be cancelled if it rains?</a>
+            </li>
+            <li>
+                <a href="#faq8">Do I need to register my child?</a>
+            </li>
+            <li>
+                <a href="#faq9">Can I bring my pet?</a>
+            </li>
+            <li>
+                <a href="#faq10">Where do I park?</a>
+            </li>
+            <li>
+                <a href="#faq11">Can I collect sponsorship online?</a>
+            </li>
+            <li>
+                <a href="#faq12">How do I withdraw from the event?</a>
+            </li>
+            <li>
+                <a href="#faq13">I am looking for accommodation for the event, where is best to stay?</a>
+            </li>
         </ol>
 
         <h2 id="faq1"> How do I sign up? </h2>
@@ -80,59 +108,59 @@
         </p>
 
 
-        <h2>Will I receive a shirt to wear at the race?</h2>
+        <h2 id="faq3">Will I receive a shirt to wear at the race?</h2>
         <p>
             Yes! We will be sending out a state of the art running vest or T-shirt to you in the post about a month before race day.
             Please remember to specify which vest or T-shirt size you would like when confirming your place.
         </p>
 
 
-        <h2>When will my registration pack arrive?</h2>
+        <h2 id="faq4">When will my registration pack arrive?</h2>
         <p>
             We will mail out your registration pack in the post within two weeks of your registration. If you have not received the pack
             within that time, please contact us.
         </p>
 
 
-        <h2>What does it cost to register?</h2>
+        <h2 id="faq5">What does it cost to register?</h2>
         <p>
             $35 for the 5K/10K race. The 1-Mile Fun Runs are free.
         </p>
 
 
-        <h2>What happens during the race?</h2>
+        <h2 id="faq6">What happens during the race?</h2>
         <p>
             Please visit the Race Info page for all details on what to expect on race day.
         </p>
 
 
-        <h2>Will the race be cancelled if it rains?</h2>
+        <h2 id="faq7">Will the race be cancelled if it rains?</h2>
         <p>
             This event will occur rain or shine. We suggest ponchos and rain gear if it does happen to rain. All registration fees and
             donations are non-refundable in the event of rain.
         </p>
 
 
-        <h2>Do I need to register my child?</h2>
+        <h2 id="faq8">Do I need to register my child?</h2>
         <p>
             Yes, if your child is participating in the 5K/10K races. There is no need to register children for the 1 Mile Fun Run.
         </p>
 
 
-        <h2>Can I bring my pet?</h2>
+        <h2 id="faq9">Can I bring my pet?</h2>
         <p>
             Pets are discouraged at the race. There are over 2000 people competing in the race and it is too crowded to accommodate pets.
         </p>
 
 
-        <h2>Where do I park?</h2>
+        <h2 id="faq10">Where do I park?</h2>
         <p>
             The earlier you arrive at the race site, the easier parking will be! You may park on the streets as long as you are not blocking
             driveways or residential streets. We encourage you to carpool with your team or other participants if possible.
         </p>
 
 
-        <h2>Can I collect sponsorship online?</h2>
+        <h2 id="faq11">Can I collect sponsorship online?</h2>
         <p>
             Yes. You can sign up at several web charity organizers and follow their easy step by step guide to create your own online
             fund-raising page. All money raised through your page will be automatically sent through to us and allocated
@@ -140,7 +168,7 @@
         </p>
 
 
-        <h2>How do I withdraw from the event?</h2>
+        <h2 id="faq12">How do I withdraw from the event?</h2>
         <p>
             The registration pack will include an official event magazine with withdrawal instructions. Complete the withdrawal form
             and send it to the race organizers along with the race gear and timing chip. A $10 organizational fee will be
@@ -148,11 +176,16 @@
         </p>
 
 
-        <h2>I am looking for accommodation for the event, where is best to stay?</h2>
+        <h2 id="faq13">I am looking for accommodation for the event, where is best to stay?</h2>
         <p>
             We are partnering with the Cheyenne Chamber of Commerce to direct visiting runners for places to stay. Low-cost camping is
             available in Prairie Park.
         </p>
+        <!-- ------------------------------------------------------------------------------------------------------------------------------- Paragraph tags and anchors were used to make a hyper link that made the Phrase"return to the top" a path to the header wich had an id . -->
+        <p>
+            <a href="#pagetop">Return to the top</a>
+        </p>
+
 
     </section>
     <footer>
