--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    -->
 
 
-    <!-- -------------------------------------------------------------------------------------------------- -->
+    <!-- ------------------------------------------------------------------------------------------------------------------------ ---->
     <!-- Meta tags were used to set encoding type and keywords were crearted to search the document. The title was established. Links were set up to add the CSS style created for the document.  -->
     <meta charset="utf-8" />
     <meta name="keywords" content="breast cancer, run, race, charity" />
@@ -28,8 +28,7 @@
 
 <body>
     <!--
-         --------------------------------------------------------------------------------------------------------
-    -->
+         ----------------------------------------------------------------------------------------------------------------------------->
     <!-- Right under the NAV was created with anchors to make a path for three documents. The lists were created to go with the style sheets so the anchors appeared in the right place.  -->
     <header>
         <nav>
@@ -48,7 +47,7 @@
 
     </header>
     <!-- 
-           ------------------------------------------------------------------------------------------------------
+           ----------------------------------------------------------------------------------------------------------------------------
            In the next section, using header,paragraph,unordered lists and lists, I was able to create body paragraphs that explain the cost of certain events. "The strong" tag was also used to give the money symbol a bold look. The header was used to seperate the sections from each other. 
          -->
     <section>
@@ -90,7 +89,7 @@
 
 
     <!-- 
-            ------------------------------------------------------------------------------------------------------
+            ---------------------------------------------------------------------------------------------------------------------------
             Here the section and header were used to seperate this body of information from the other text above. An image tag was used to place an image above all the text. Headers were used to organize the important titles by making certain words bigger. Strong was used to give the head a bold look. 
          -->
     <section>
@@ -110,10 +109,11 @@
         <h2>How to Join</h2>
 
         <p>
-            You can guarantee a spot by filling out the entry form and mailing it to dianesrun@example.com. The $35 entry fee is tax
-            deductible and goes directly to important research and women in need. We keep our overhead very low so every
-            dollar counts. More than 75% of the net proceeds fund screening and treatment programs in your communities. We
-            welcome out-of-town visitors. We will help you find accommodations during your visit.
+            You can guarantee a spot by filling out the entry form and mailing it to link
+            <a mailto="dianesrun@example.com">Entry form</a> . The $35 entry fee is tax deductible and goes directly to important research and women in need.
+            We keep our overhead very low so every dollar counts. More than 75% of the net proceeds fund screening and treatment
+            programs in your communities. We welcome out-of-town visitors. We will help you find
+            <a href="faq13">accommodations</a> during your visit.
         </p>
 
         <h2>History</h2>
@@ -141,7 +141,7 @@
 
     </section>
 
-    <!-- ----------------------------------------------------------------------------------------------------
+    <!-- -----------------------------------------------------------------------------------------------------------------------------------
     The footer was sed to create a line of information at the bottom of the document, within the document character codes were used to make a heart appear when one opens the document.
     -->
     <footer>
